2007-12-09  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnail.c: (create_meta_theme_pixbuf): free metacity theme
	after use

2007-12-04  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Brian Cameron <brian.cameron@sun.com>

	* gtkrc-utils.c: (gtkrc_get_details), (gtkrc_get_color_scheme):
	printing NULL strings crashes on Solaris so don't do that (bug #501391)

20007-11-12  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-theme-info.c:
	* gnome-theme-info.h: re-added GnomeThemeElement to the "public" API,
	since it's used in gnome-theme-test.

2007-11-11  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c:
	* gnome-theme-info.h: remove GnomeThemeElement from the "public" API

2007-11-11  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (handle_change_signal), (update_theme_index),
	(update_common_theme_dir_index):
	* gnome-theme-info.h: remove more redundant info from the theme changed
	callback

2007-10-29  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (theme_compare), (theme_free),
	(update_common_theme_dir_index), (common_icon_theme_dir_changed),
	(gnome_theme_cursor_info_find_all),
	(gnome_theme_cursor_info_compare):
	* gnome-theme-info.h: make sure we always call update_cursor_theme_index
	with the index.theme URI. Implement some missing functionality for
	cursor theme monitoring.

2007-10-28  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (add_default_cursor_theme),
	(read_cursor_theme), (update_common_theme_dir_index),
	(update_meta_theme_index), (update_icon_theme_index),
	(update_cursor_theme_index), (common_icon_theme_dir_changed),
	(add_common_icon_theme_dir_monitor), (gnome_theme_info_find),
	(gnome_theme_init): add live monitoring for cursor themes

2007-10-28  Jens Granseuer  <jensgr@gmx.net>

	* gconf-property-editor.c: (gconf_peditor_new_tree_view): add cast to
	avoid "incompatible types" compiler warning

2007-10-28  Jens Granseuer  <jensgr@gmx.net>
